[platform] making `Path`-based `PathManager` getters a bit faster; obsoleting `String`-based counterparts
GitOrigin-RevId: 3e0ec7453e864f22a2891d74054ddc01a7b40278